[tool.poetry]
name = "netmet"
version = "0.1.0"
description = "python exercises for under graduated students in computer networking"
authors = ["hrimlinger <hugorimlinger4@gmail.com>"]
readme = "README.md"
packages = [
    { include = "common" },
    { include = "settings" },
    { include = "TP1" },
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.3"
matplotlib = "^3.4.3"
requests = "^2.17.0"
dnspython = "^2.4.1"
geopy = "^2.3.0"
ujson = "^5.8.0"
scipy = "^1.5.0"
geopandas = "^0.13.2"
rasterio = "^1.3.8"
jupyter = "^1.0.0"
py-radix = "^0.10.0"
pyasn = "^1.6.2"
python-dotenv="^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"